# ai_projects

./: .gitignore  pyproject.toml
projects/linear_regression/: gradient_descent.py  measure.py  query.py  query_new.py  query_old.py  report.tex  train.py  train_new.py  train_old.py
projects/recommender/: data_handler.py  exploration.ipynb  framework.py  gradient_descent.py  scratch.py  skills.csv  skills_ordered.csv  skills_simple.csv
tests/: test_projects.py
