[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Topiltzin Hernández Mares <topiltzin.hernandez@wizeline.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
numpy = "^1.21.2"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
pickle4 = "^0.0.1"
jupyter = "^1.0.0"
scipy = "^1.7.1"
implicit = "^0.4.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
